--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="discovery" class="nav-link" routerLinkActive="active">
+        <a routerLink="/all-movies" class="nav-link" routerLinkActive="active">
           <span><i class="fas fa-search"></i> Discovery</span>
         </a>
       </li>
