--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <app-side-menu></app-side-menu>
     </div>
     <div class="col-10 content">
-      <app-nav></app-nav>
+      <!-- <app-nav></app-nav> -->
 
       <div class="hero-section cr"   [routerLink]="['/details', movies[14].id]" *ngIf="movies.length > 0">
         <div
