feat: add Top Rated TV Shows component with pagination and loading functionality

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -17,10 +17,11 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="community" class="nav-link" routerLinkActive="active">
-          <span><i class="fas fa-users"></i> Community</span>
+        <a routerLink="/top-rated" class="nav-link" routerLinkActive="active">
+          <span><i class="fas fa-star"></i> Top Rated</span>
         </a>
       </li>
+    
       <li class="nav-item">
         <a routerLink="/up-coming" class="nav-link" routerLinkActive="active">
           <span><i class="fas fa-calendar-alt"></i> Coming soon</span>
@@ -43,8 +44,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="top-rated" class="nav-link" routerLinkActive="active">
-          <span><i class="fas fa-star"></i> Top Rated</span>
+        <a routerLink="community" class="nav-link" routerLinkActive="active">
+          <span><i class="fas fa-users"></i> Community</span>
         </a>
       </li>
       <li class="nav-item">
