feat: add Signup component and update routing for sign in and sign up

--- a/src/app/components/land-page/land-page.component.html
+++ b/src/app/components/land-page/land-page.component.html
@@ -10,7 +10,7 @@
             <option>English</option>
             <option>العربية</option>
           </select>
-          <button class="btn">Sign In</button>
+          <button class="btn" routerLink="/login">Sign In</button>
         </div>
       </div>
 
@@ -30,7 +30,7 @@
 
         <div class="body-form">
           <input type="email" placeholder="Email address" />
-          <button class="btn">
+          <button class="btn" routerLink="/plans">
             Get Started
             <i class="fa-solid fa-arrow-right"></i>
           </button>
