--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="signin-btn cr">
-              <button type="submit" class="btn">Sign In</button>
+              <button type="submit" class="btn" routerLink="/home">Sign In</button>
             </div>
             <span class="or">OR</span>
             <div class="signin-code cr">
@@ -42,7 +42,7 @@
         </div>
 
         <div class="signup">
-          <p>New to Netflix? <a class="cr" href="#"> Sign up now</a></p>
+          <p>New to Netflix? <a class="cr" routerLink="/login"> Sign up now</a></p>
         </div>
 
         <div class="warn-p">
