--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -69,7 +69,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="logout" class="nav-link" routerLinkActive="active">
+        <a routerLink="/land" class="nav-link"  routerLinkActive="active">
           <span><i class="fas fa-sign-out-alt"></i> Logout</span>
         </a>
       </li>
