fix: next buttons

--- a/src/app/components/plans/plans.component.html
+++ b/src/app/components/plans/plans.component.html
@@ -356,7 +356,7 @@
             </div>
           </div>
 
-          <button class="next-btn" (click)="nextStep()">Next</button>
+          <button class="next-btn" routerLink="/home">Next</button>
         </div>
       </div>
     </div>
