--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -59,7 +59,7 @@
       <div class="content-body">
         <div class="section-title">
           <h4>Trending Movies</h4>
-          <span>See all <i class="fa-solid fa-arrow-right"></i></span>
+          <span routerLink="/all-movies" class="cr">See all <i class="fa-solid fa-arrow-right"></i></span>
         </div>
 
         <div class="trending-slider cr">
